# ocaml-aoc2025

./: .gitignore  README.md  aoc2025.opam  dune-project
lib/: day0.ml  day1.ml  day10.ml  day11.ml  day12.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  day8.ml  day9.ml  dune
