(lang dune 3.17)

(name aoc2025)

(generate_opam_files true)

(source
 (github mbacarella/aoc2025))

(authors "<m@bacarella.com>")

(maintainers 
  "<m@bacarella.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc2025)
 (synopsis "AOC2025 in OCaml")
 (description "What the hell, why not")
 (depends ocaml))
